--- a/ParkMobileServer/park-mobile-ssr/src/Components/Help/CreditComponent/CreditComponent.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Help/CreditComponent/CreditComponent.module.scss
@@ -11,6 +11,7 @@
     gap: 40px;
     & h4 {
       font-family: "SF-Pro-Display-Regular";
+      font-weight: 1000;
       font-size: 2.4rem;
       letter-spacing: 2px;
     }
