--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductModal/ProductModal.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductModal/ProductModal.module.scss
@@ -62,6 +62,17 @@
             }
         }
 
+        &-price-in-online {
+            display: flex;
+            flex-flow: row nowrap;
+            gap: 10px;
+            
+            & strong {
+                font-size: .9rem;
+                font-weight: 700;
+            }
+        }
+
         & button {
             display: inline-block;
             color: #ffffff;
@@ -93,6 +104,33 @@
             & a {
                 color: #87a08b;
                 cursor: pointer;
+            }
+        }
+    }
+}
+
+.tooltip {
+    &-content {
+        display: flex;
+        flex-flow: column nowrap;
+        gap: 20px;
+    
+        & div {
+            display: flex;
+            flex-flow: column nowrap;
+            gap: 3px;
+    
+            & strong {
+                font-weight: 700;
+                letter-spacing: 1px;
+                font-size: 1rem;
+                font-family: "SF-Pro-Display-Regular";
+            }
+    
+            & label {
+                font-family: "SF-Pro-Display-Regular_light";
+                font-size: .9rem;
+                letter-spacing: 1px;
             }
         }
     }
