--- a/ParkMobileServer/park-mobile-ssr/src/Components/HeaderSlider/SliderSearch/SliderSearchCard/SliderSearchCard.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/HeaderSlider/SliderSearch/SliderSearchCard/SliderSearchCard.module.scss
@@ -25,6 +25,7 @@
 
 @media (max-width: 1024px) {
     .slider-search-card {
+        width: 100%;
         display: grid;
         grid-template-columns: 1fr 4fr;
         gap: 10px;
