--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductModal/ProductModal.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductModal/ProductModal.module.scss
@@ -4,6 +4,27 @@
     min-width: 70%;
 }
 
+.information-title {
+    background-color: white;
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 5px;
+
+
+    & strong {
+        font-family: "SF-Pro-Display-Regular";
+        font-weight: 900;
+        font-size: 1rem;
+        letter-spacing: 1px;
+    }
+
+    & span {
+        font-family: "SF-Pro-Display-Regular_light";
+        font-size: .8rem;
+        letter-spacing: 1px;
+    }
+}
+
 .item-container {
     min-width: 100%;
     min-height: 90vh;
@@ -25,23 +46,35 @@
 
         & header {
             & h3 {
-                font-size: 24px;
+                font-size: 1.4rem;
                 font-weight: 400;
                 line-height: 32.4px;
                 font-family: "SF-Pro-Display-Regular";
             }
 
             & title {
-                font-size: 14px;
+                font-size: 1rem;
                 font-weight: 300;
                 line-height: 21.7px #777777
             }
 
             & article {
-                font-size: 14px;
+                font-size: .75rem;
                 font-weight: 300;
                 line-height: 21.7px;
                 color: #777777;
+            }
+        }
+
+        &-price-in-online {
+            & span {
+                font-size: 1rem;
+                line-height: 22px;
+            }
+
+            & strong {
+                font-size: 1rem;
+                line-height: 22px;
             }
         }
 
