--- a/ParkMobileServer/park-mobile-ssr/src/Components/Header/MobileHeader/MobileSearchMenu/MobileSearchMenu.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Header/MobileHeader/MobileSearchMenu/MobileSearchMenu.module.scss
@@ -56,12 +56,15 @@
 }
 
 .pagination-block {
-    align-self: center;
-    justify-content: center;
+    align-self: baseline;
+    justify-content: flex-start;
+    padding-left: 3%;
     display: flex;
     flex-flow: row nowrap;
-    gap: 15px;
-    margin-top: 1%;
+    gap: 10px;
+    margin-top: 2%;
+    width: 75%;
+    overflow: auto;
 
     &-item {
         font-family: "SF-Pro-Display-Regular_light";
