исправлен баг с неправильным отображением значка watsapp в мобильной версии

--- a/ParkMobileServer/park-mobile-ssr/src/Components/Header/MobileHeader/MobileHeader.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Header/MobileHeader/MobileHeader.module.scss
@@ -63,7 +63,7 @@
             }
             & a[href="https://wa.me/79337772777"] {
                 border-radius: 10px;
-                padding: 0px;
+                padding-top: 9%;
                 & img {
                     border-radius: 10px;
                 }
