Реализована логика, когда товара нет в наличии

--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
@@ -58,6 +58,11 @@
   text-decoration: line-through;
 }
 
+.disabled {
+  opacity: 0.5;
+  cursor: default;
+}
+
 @media (max-width: 1024px) {
   .product-card {
     position: relative;
