Изменены цвета на интуитивно понятные

--- a/ParkMobileServer/park-mobile-ssr/src/Components/Footer/Footer.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Footer/Footer.module.scss
@@ -30,7 +30,7 @@
             }
             & span, a {
                 font-size: 0.8rem;
-                color: #909090;
+                color: #ffffff94;
                 cursor: pointer;
                 text-decoration: none;
                 &:hover {
