--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
@@ -46,7 +46,7 @@
       font-family: "SF-Pro-Display-Regular_light";
       font-weight: 100;
       border-radius: 5px;
-      background-color:rgb(183,167,245);
+      background-color:#8a6cff;
       color:white
     }
   }
