Добавлена плашка (ожидание 1-2 дня) + добавлен вопрос при наведении на вопрос в карточке товара

--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductModal/OrderForm/OrderForm.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductModal/OrderForm/OrderForm.module.scss
@@ -18,3 +18,10 @@
   font-weight: 700;
   font-size: .8rem;
 }
+
+.waitting {
+  margin-top: 2%;
+  display: block;
+  font-size: .8rem;
+  opacity: 0.9;
+}
