--- a/ParkMobileServer/park-mobile-ssr/src/app/App.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/app/App.scss
@@ -15,7 +15,7 @@ body {
     text-size-adjust: 100%;
     position: relative;
 
-    width: 100%;
+    width: 100% !important;
     min-height: 100vh;
 
     -moz-osx-font-smoothing: grayscale;
@@ -597,6 +597,7 @@ template {
 
 body {
     font-family: 'Roboto';
+    width: 100%;
     height: 200%;
 
     * {
