--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
@@ -1,20 +1,30 @@
 .product-card {
   position: relative;
   display: grid;
-  grid-template-rows: 13fr 1fr 1fr;
+  grid-template-rows: 13fr 1fr 1fr 1fr;
   padding: 0px 10px;
   height: fit-content;
   width: 255px;
   height: 450px;
   cursor: pointer;
+  transition: transform .15s ease-in;
+  &:hover {
+    .add-to-bucket-button {
+      opacity: 1;
+    }
+    transform: scale(1.05);
+    transition: transform .15s ease-in;
+  }
   & img {
     align-self: center;
     justify-self: center;
   }
   &-text-block {
+    cursor: pointer;
     display: flex;
     flex-flow: column nowrap;
     &-tag {
+      cursor: pointer;
       font-family: "SF-Pro-Display-Regular";
       text-align: center;
       font-size: 1.4rem;
@@ -49,6 +59,53 @@
       background-color:#8a6cff;
       color:white
     }
+  }
+}
+
+.information-title {
+  background-color: white;
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 5px;
+
+
+  & strong {
+      font-family: "SF-Pro-Display-Regular";
+      font-weight: 900;
+      font-size: 1rem;
+      letter-spacing: 1px;
+  }
+
+  & span {
+      font-family: "SF-Pro-Display-Regular_light";
+      font-size: .8rem;
+      letter-spacing: 1px;
+  }
+}
+
+.add-to-bucket {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-items: center;
+  width: 100%;
+  &-button {
+    margin-top: 3%;
+    font-size: 1rem;
+    opacity: 0;
+    letter-spacing: 1px;
+    font-family: 'SF-Pro-Display-Regular_light';
+    border-radius: 5px;
+    height: 35px;
+    width: 90%;
+    background-color: #87a08b;
+    color: #f5f5f7;
+    // &:hover {
+    //   background-color: #87a08b23;
+    //   color: #87a08b;
+    //   border: 1px solid #87a08b;
+    //   box-shadow: (0px 0px 10px #87a08b98);
+    // }
   }
 }
 
