--- a/ParkMobileServer/park-mobile-ssr/src/Components/Header/Header.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Header/Header.module.scss
@@ -8,7 +8,7 @@
   grid-template-columns: 1fr 2fr 1fr;
   width: 100%;
   height: 55px;
-  background-color: #454545;
+  background-color: black;
   &-hidden {
     top: -55px;
     transition: top .3s ease-in-out;
@@ -41,7 +41,7 @@
     cursor: pointer;
     &:hover {
       // color: rgba(255, 255, 255, 0.73);
-      color: #aab984;
+      color: #87a08b;
     }
   }
   &-bucket-search {
@@ -60,11 +60,10 @@
       align-items: center;
       gap: 10px;
       & span {
-        background-color: #3c3c3c;
+        background-color: black;
         border-radius: 1000px;
-        padding: 2px 6px;
+        padding: 0px 6px;
         color: white;
-        color: gray;
         font-family: "Arial";
         user-select: none;
       }
