--- a/ParkMobileServer/park-mobile-ssr/src/Components/HeaderSlider/HeaderSlider.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/HeaderSlider/HeaderSlider.module.scss
@@ -3,7 +3,7 @@
         position: fixed;
         top: 55px;
         left: 0px;
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: rgba(0, 0, 0, 0.253);
         transition: background-color .5s ease-in-out;
         height: calc(100% - 55px);
         width: 100%;
@@ -34,7 +34,7 @@
             width: 100%;
             height: 350px;
             transition: height .5s ease-in-out;
-            background-color: #454545;
+            background-color: black;
             animation: BlurContentIn 0.6s forwards cubic-bezier(0.075, 0.82, 0.165, 1);
             display: grid;
             grid-template-columns: 1fr 5fr;
@@ -126,7 +126,7 @@
             width: 100%;
             height: 350px;
             background-color: #454545;
-            animation: BlurContentOut 0.2s forwards ease-out;
+            animation: BlurContentOut 0.35s forwards ease-out;
         }
     }
 }
