Исправлен баг с цветом

--- a/ParkMobileServer/park-mobile-ssr/src/Components/HeaderSlider/HeaderSlider.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/HeaderSlider/HeaderSlider.module.scss
@@ -125,7 +125,7 @@
             z-index: 3;
             width: 100%;
             height: 350px;
-            background-color: #454545;
+            background-color: black;
             animation: BlurContentOut 0.35s forwards ease-out;
         }
     }
