--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: grid;
   grid-template-rows: 13fr 1fr 1fr 1fr;
-  padding: 0px 10px;
+  padding: 0px 0px;
   height: fit-content;
   width: 255px;
   height: 450px;
@@ -14,6 +14,7 @@
     }
     transform: scale(1.05);
     transition: transform .15s ease-in;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.547);
   }
   & img {
     align-self: center;
@@ -47,8 +48,8 @@
     }
     &-tile {
       position:absolute;
-      top:0px;
-      left:0px;
+      top:10px;
+      left:10px;
       width:80px;
       height:30px;
       text-align:center;
@@ -91,21 +92,14 @@
   width: 100%;
   &-button {
     margin-top: 3%;
-    font-size: 1rem;
+    font-size: 1.2rem;
     opacity: 0;
     letter-spacing: 1px;
     font-family: 'SF-Pro-Display-Regular_light';
-    border-radius: 5px;
-    height: 35px;
-    width: 90%;
-    background-color: #87a08b;
+    height: 60px;
+    width: 100%;
+    background-color: black;
     color: #f5f5f7;
-    // &:hover {
-    //   background-color: #87a08b23;
-    //   color: #87a08b;
-    //   border: 1px solid #87a08b;
-    //   box-shadow: (0px 0px 10px #87a08b98);
-    // }
   }
 }
 
