--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
@@ -15,6 +15,12 @@
     transform: scale(1.05);
     transition: transform .15s ease-in;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.547);
+
+    & .add-to-bucket {
+      span {
+        opacity: 1;
+      }
+    }
   }
   & img {
     align-self: center;
@@ -85,12 +91,16 @@
 }
 
 .add-to-bucket {
+  position: relative;
+  overflow: hidden;
+  height: 60px;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
   justify-items: center;
   width: 100%;
   &-button {
+    position: relative;
     margin-top: 3%;
     font-size: 1.2rem;
     opacity: 0;
@@ -100,6 +110,18 @@
     width: 100%;
     background-color: black;
     color: #f5f5f7;
+  }
+
+  & span {
+    opacity: 0;
+    line-height: 60px;
+    border-top: 0.5px solid rgba(0, 0, 0, 0.547);
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+    font-family: 'SF-Pro-Display-Regular_light';
+    height: 60px;
+    width: 100%;
+    text-align: center;
   }
 }
 
