Исправление по шаблону

--- a/ParkMobileServer/park-mobile-ssr/src/app/App.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/app/App.scss
@@ -627,6 +627,12 @@ body {
     font-display: swap;
 }
 
+@font-face {
+    font-family: "Montserrat-Regular";
+    src: url("../assets/Fonts/Montserrat/Montserrat-Regular.ttf");
+    font-display: swap;
+}
+
 * {
     font-family: "SF-Pro-Display-Regular";
 }
