--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
@@ -14,7 +14,6 @@
     }
     transform: scale(1.05);
     transition: transform .15s ease-in;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.547);
 
     & .add-to-bucket {
       span {
@@ -54,8 +53,8 @@
     }
     &-tile {
       position:absolute;
-      top:10px;
-      left:10px;
+      top:0px;
+      left:0px;
       width:80px;
       height:30px;
       text-align:center;
@@ -99,28 +98,28 @@
   align-items: center;
   justify-items: center;
   width: 100%;
+  margin-top: 2%;
   &-button {
     position: relative;
-    margin-top: 3%;
-    font-size: 1.2rem;
+    font-size: 1rem;
     opacity: 0;
-    letter-spacing: 1px;
-    font-family: 'SF-Pro-Display-Regular_light';
-    height: 60px;
-    width: 100%;
+    font-family: 'Montserrat-Regular';
+    height: 40px;
+    width: 60%;
+    border-radius: 10px;
     background-color: black;
     color: #f5f5f7;
   }
 
   & span {
     opacity: 0;
-    line-height: 60px;
-    border-top: 0.5px solid rgba(0, 0, 0, 0.547);
-    font-size: 1.2rem;
-    letter-spacing: 1px;
-    font-family: 'SF-Pro-Display-Regular_light';
-    height: 60px;
-    width: 100%;
+    line-height: 40px;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 1rem;
+    font-family: 'Montserrat-Regular';
+    height: 40px;
+    width: 60%;
     text-align: center;
   }
 }
