--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
@@ -2,10 +2,10 @@
   position: relative;
   display: grid;
   grid-template-rows: 13fr 1fr 1fr 1fr;
-  padding: 0px 0px;
+  margin: 5px;
   height: fit-content;
-  width: 255px;
-  height: 450px;
+  width: 275px;
+  height: 550px;
   cursor: pointer;
   transition: transform .15s ease-in;
   &:hover {
@@ -14,6 +14,7 @@
     }
     transform: scale(1.05);
     transition: transform .15s ease-in;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
 
     & .add-to-bucket {
       span {
@@ -53,8 +54,8 @@
     }
     &-tile {
       position:absolute;
-      top:0px;
-      left:0px;
+      top:5px;
+      left:5px;
       width:80px;
       height:30px;
       text-align:center;
@@ -101,6 +102,7 @@
   margin-top: 2%;
   &-button {
     position: relative;
+    text-align: center;
     font-size: 1rem;
     opacity: 0;
     font-family: 'Montserrat-Regular';
@@ -109,11 +111,16 @@
     border-radius: 10px;
     background-color: black;
     color: #f5f5f7;
+    transition: background-color .15s ease-in-out;
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.900);
+      transition: background-color .15s ease-in-out;
+    }
   }
 
   & span {
     opacity: 0;
-    line-height: 40px;
+    line-height: 38px;
     border: 1px solid black;
     border-radius: 10px;
     font-size: 1rem;
