--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
@@ -112,10 +112,16 @@
     background-color: black;
     color: #f5f5f7;
     transition: background-color .15s ease-in-out;
+
     &:hover {
-      background-color: rgba(0, 0, 0, 0.900);
+      background-color: #4B4B4B;
       transition: background-color .15s ease-in-out;
+
+      & label {
+        color: white;
+      }
     }
+
   }
 
   & span {
