--- a/ParkMobileServer/park-mobile-ssr/src/app/App.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/app/App.scss
@@ -621,12 +621,12 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #87a08b;
+    background: #d6d6d6;
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #a7c6ac;
+    background: #c3c3c3;
 }
 
 @font-face {
