--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
@@ -2,10 +2,10 @@
   position: relative;
   display: grid;
   grid-template-rows: 13fr 1fr 1fr 1fr;
-  padding: 0px 10px;
+  margin: 5px;
   height: fit-content;
-  width: 255px;
-  height: 450px;
+  width: 275px;
+  height: 550px;
   cursor: pointer;
   transition: transform .15s ease-in;
   &:hover {
@@ -14,6 +14,13 @@
     }
     transform: scale(1.05);
     transition: transform .15s ease-in;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+
+    & .add-to-bucket {
+      span {
+        opacity: 1;
+      }
+    }
   }
   & img {
     align-self: center;
@@ -47,8 +54,8 @@
     }
     &-tile {
       position:absolute;
-      top:0px;
-      left:0px;
+      top:5px;
+      left:5px;
       width:80px;
       height:30px;
       text-align:center;
@@ -84,28 +91,49 @@
 }
 
 .add-to-bucket {
+  position: relative;
+  overflow: hidden;
+  height: 60px;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
   justify-items: center;
   width: 100%;
+  margin-top: 2%;
   &-button {
-    margin-top: 3%;
+    position: relative;
+    text-align: center;
     font-size: 1rem;
     opacity: 0;
-    letter-spacing: 1px;
-    font-family: 'SF-Pro-Display-Regular_light';
-    border-radius: 5px;
-    height: 35px;
-    width: 90%;
-    background-color: #87a08b;
+    font-family: 'Montserrat-Regular';
+    height: 40px;
+    width: 60%;
+    border-radius: 10px;
+    background-color: black;
     color: #f5f5f7;
-    // &:hover {
-    //   background-color: #87a08b23;
-    //   color: #87a08b;
-    //   border: 1px solid #87a08b;
-    //   box-shadow: (0px 0px 10px #87a08b98);
-    // }
+    transition: background-color .15s ease-in-out;
+
+    &:hover {
+      background-color: #4B4B4B;
+      transition: background-color .15s ease-in-out;
+
+      & label {
+        color: white;
+      }
+    }
+
+  }
+
+  & span {
+    opacity: 0;
+    line-height: 38px;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 1rem;
+    font-family: 'Montserrat-Regular';
+    height: 40px;
+    width: 60%;
+    text-align: center;
   }
 }
 
