--- a/ParkMobileServer/park-mobile-ssr/src/app/App.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/app/App.scss
@@ -599,6 +599,7 @@ body {
     font-family: 'Roboto';
     width: 100%;
     height: 200%;
+    overflow-y: scroll; /* Всегда показывать вертикальную полосу прокрутки */
 
     * {
         scrollbar-width: thin;
@@ -607,6 +608,25 @@ body {
             color: white;
         }
     }
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 4px;
+}
+
+::-webkit-scrollbar-track {
+    background: #ffffff;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #d6d6d6;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #c3c3c3;
 }
 
 @font-face {
@@ -624,6 +644,12 @@ body {
 @font-face {
     font-family: "SF-Pro-Display-Heavy";
     src: url("../assets/Fonts/SF-Pro-Display-Heavy.otf");
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Montserrat-Regular";
+    src: url("../assets/Fonts/Montserrat/Montserrat-Regular.ttf");
     font-display: swap;
 }
 
@@ -751,6 +777,28 @@ body {
     .ant-upload-wrapper {
         width: 100% !important;
         height: 100% !important;
+    }
+}
+
+.bubble {
+    position: absolute;
+    z-index: 1;
+    width: 30px;
+    height: 30px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    pointer-events: none;
+    transform: translate(-50%, -50%);
+    animation: bubble-float 1000ms ease-in-out forwards;
+}
+
+@keyframes bubble-float {
+    0% {
+        opacity: 0.3;
+    }
+    to {
+        opacity: 0;
+        transform: translate(-50%, -150%) scale(50);
     }
 }
 
