--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductCard/ProductCard.module.scss
@@ -109,22 +109,40 @@
     height: 40px;
     width: 60%;
     border-radius: 10px;
-    background-color: black;
-    color: #f5f5f7;
-    transition: background-color .15s ease-in-out;
-
-    &:hover {
-      background-color: #4B4B4B;
+    &[data-state="В корзину"] {
+      background-color: black;
+      color: #f5f5f7;
       transition: background-color .15s ease-in-out;
-
-      & label {
-        color: white;
+  
+      &:hover {
+        background-color: #4B4B4B;
+        transition: background-color .15s ease-in-out;
+  
+        & label {
+          color: white;
+        }
+      }
+    }
+    &[data-state="Заказать"] {
+      background-color: #EDEDED;
+      border: 1px solid #C5C5C5;
+      color: #646464;
+      transition: border .15s ease-in-out;
+  
+      &:hover {
+        background-color: #F1F1F1;
+        border: 1px solid #F1F1F1;
+        color: #797979;
+        transition: border .15s ease-in-out;
       }
     }
 
+    & label {
+      cursor: pointer;
+    }
   }
 
-  & span {
+  & > span {
     opacity: 0;
     line-height: 38px;
     border: 1px solid black;
@@ -156,8 +174,8 @@
     padding: 0px 10px;
     height: fit-content;
     width: 190px;
-    height: 350px;
-    gap: 5px;
+    height: 420px;
+    gap: 0px 5px;
     cursor: pointer;
 
     & img {
@@ -192,8 +210,8 @@
 
       &-tile {
         position: absolute;
-        top: 0%;
-        left: 0px;
+        top: 10px;
+        left: 10px;
         width: 65px;
         height: 27px;
         text-align: center;
@@ -205,6 +223,18 @@
         background-color: rgb(183, 167, 245);
         color: white
       }
+    }
+  }
+
+  .add-to-bucket {
+    &-button {
+      // Стили для кнопки
+    }
+  
+    // Проверка наличия span на первом уровне
+    & > span {
+      text-wrap: nowrap;
+      width: 80%;
     }
   }
 }
