--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductModal/ProductModal.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductModal/ProductModal.module.scss
@@ -116,7 +116,8 @@
             font-family: "SF-Pro-Display-Regular";
             font-weight: 400;
             height: 45px;
-            font-size: 14px;
+            font-size: 1.1rem;
+            letter-spacing: 1px;
             padding-left: 30px;
             padding-right: 30px;
             cursor: pointer;
