Добавлена сортировка и переписаны некоторые методы контроллера

--- a/ParkMobileServer/park-mobile-ssr/src/Shared/Components/ItemsCategories/ItemsCategories.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Shared/Components/ItemsCategories/ItemsCategories.module.scss
@@ -4,7 +4,7 @@
     width: 1000px;
     gap: 10px;
     margin-top: 20px;
-    padding-bottom: 7rem;
+    padding-bottom: 2rem;
     & span {
         display: inline-block;
         user-select: none;
@@ -39,7 +39,7 @@
         width: 100vw;
         gap: 10px;
         margin-top: 20px;
-        padding: 2rem 2vw;
+        padding: 2em 2vw;
         & span {
             display: inline-block;
             user-select: none;
