Исправлен баг с мобильным слайдером, исправлен баг с неправильным отображением поиска в мобильной версии, исправлен баг с неотображением данных после выборки в главном бурегр меню, исправлены отступ сверху со страниц в мобильной версии, исправлен баг с невозможностью нажать крестик в карточке товара, исправлен цвет второго меню после нажатия в бургер меню

--- a/ParkMobileServer/park-mobile-ssr/src/Components/Header/MobileHeader/MobileSearchMenu/MobileSearchMenu.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Header/MobileHeader/MobileSearchMenu/MobileSearchMenu.module.scss
@@ -1,6 +1,7 @@
 .mobile-search {
     position: absolute;
     z-index: 3;
+    padding-top: 12.5%;
     &-container {
         display: flex;
         flex-flow: row nowrap;
