--- a/ParkMobileServer/park-mobile-ssr/src/Components/Help/DeliveryComponent/DeliveryComponent.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Help/DeliveryComponent/DeliveryComponent.module.scss
@@ -186,6 +186,10 @@
 }
 
 @media (max-width:1024px) {
+    .delivery-block {
+        padding-top: 17%;
+        margin-top: 0px;
+    }
     .delivery-block-payment-info {
         width: 80%;
     }
