--- a/ParkMobileServer/park-mobile-ssr/src/Components/Help/TradeInComponent/TradeInComponent.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Help/TradeInComponent/TradeInComponent.module.scss
@@ -76,6 +76,7 @@
     .trade-in-block {
         margin-top: 0px;
         margin-left: 0px;
+        padding-top: 17%;
         & h2 {
             width: 95vw !important;
             margin-top: 10%;
