--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Catalog.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Catalog.module.scss
@@ -8,3 +8,10 @@
         margin-bottom: 115px;
     }
 }
+
+.sort-block {
+    width: 60%;
+    align-self: flex-start;
+    margin-left: 5%;
+    padding-bottom: 4rem;
+}
