--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductObertka/ProductObertka.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductObertka/ProductObertka.module.scss
@@ -15,3 +15,16 @@
         }
     }
 }
+
+@media (max-width: 1024px) {
+    .product-container {
+        padding-top: 17%;
+        &-header {
+            padding-left: 4.5%;
+        }
+    }
+
+    .categories-and-sort-block {
+        margin-left: 5%;
+    }
+}
