--- a/ParkMobileServer/park-mobile-ssr/src/Components/Header/MobileHeader/MobileHeader.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Header/MobileHeader/MobileHeader.module.scss
@@ -234,7 +234,7 @@
 }
 
 .drawer {
-    background-color: #454545 !important;
+    background-color: black !important;
     color: white;
     font-size: 1rem;
     &-body {
