--- a/ParkMobileServer/park-mobile-ssr/src/Components/Help/GuranteeComponent/GuranteeComponent.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Help/GuranteeComponent/GuranteeComponent.module.scss
@@ -76,7 +76,8 @@
 
 @media (max-width: 1024px) {
     .gurantee-block {
-        margin-top: 40px;
+        margin-top: 0px;
+        padding-top: 20%;
     }
 
     .gurantee-block-gurantee {
