--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Catalog.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Catalog.module.scss
@@ -12,6 +12,15 @@
 .sort-block {
     width: 60%;
     align-self: flex-start;
-    margin-left: 5%;
+    margin-left: 26.5%;
     padding-bottom: 4rem;
+}
+
+@media (max-width: 1024px) {
+    .sort-block {
+        width: 60%;
+        align-self: flex-start;
+        margin-left: 5%;
+        padding-bottom: 4rem;
+    }
 }
