--- a/ParkMobileServer/park-mobile-ssr/src/app/(main_app)/categories/[category]/[...items]/ItemsPage.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/app/(main_app)/categories/[category]/[...items]/ItemsPage.module.scss
@@ -30,6 +30,11 @@
   }
 }
 
+.categories-and-sort-block:has(:only-child) {
+  margin-left: 50%;
+  width: 100%;
+}
+
 @media (max-width: 1024px) {
   .product-container {
     padding-top: 17%;
