1)Исправление бага с выбором карточки через меню поиска в мобильной версии(шапка сайта пропадала при выборе товара через поиск) 2)Исправление бага с сортировкой по цене(теперь работает не как со СТРОЧНЫМ типом данных, а как с ЧИСЛОМ) 3)Исправлен баг с описанием(изображение товара уходило вниз) 4)Исправлен баг с яндекс устройствами(не отображались в категориях) 5)Исправлен баг с ценой в карточках товара(отображалась только цена со скидкой. Баг появился вчера вечером после исправления типа данных цены товара, сегодня я его исправил) 6)Баг с ценой товара в меню-поиска(мобильная версия). У товаров со скидкой не отображалась цена со скидкой 7)Баг с корзиной при добавлении товара в мобильной версии(шапка просто не возвращалась, приходилось заходить в карточку другого товара, а затем выходить из неё) 8)Исправлен баг с корзиной товаров(мобильная версия). Заголовок шапки был скрыт 9)Исправлен баг с политикой конфиденциальности(мобильная версия). Шапка отставала от верхней части экрана на 60 пикселей 10)Исправлен баг с заявкой на ремонт/трейд-ин(мобильная версия). Теперь скрывается бургер-меню при выборе ремонт/трейд-ин

--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductModal/ProductModal.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/ProductModal/ProductModal.module.scss
@@ -263,6 +263,13 @@
 }
 
 @media (min-width:401px) and (max-width: 1024px) {
+    .item-modal-window {
+        border: none;
+        background-color: transparent;
+        min-width: 90%;
+        height: 73%;
+    }
+
     .item-container {
         grid-template-columns: 1fr;
         grid-template-rows: none;
