--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Categories/Categories.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Categories/Categories.module.scss
@@ -1,36 +1,53 @@
-.categories-block {
+.categories {
     display: flex;
-    flex-flow: row wrap;
-    width: 1000px;
-    gap: 10px;
-    margin-top: 20px;
-    padding-bottom: 2rem;
-    & span {
-        display: inline-block;
-        user-select: none;
-        padding: 10px;
-        background-color: #f0f0f5;
-        transition: background-color .3s;
-        border-radius: 5px;
-        font-family: "SF-Pro-Display-Regular_light";
-        letter-spacing: 1px;
-        font-weight: 400;
-        opacity: 0;
-        &[data-no-animation=true] {
-            opacity: 1;
-        }
-        cursor: pointer;
-        &:hover {
+    flex-flow: row nowrap;
+    gap: 25px;
+    width: 100%;
+    padding-left: 21.1%;
+
+    &-block {
+        display: flex;
+        flex-flow: row wrap;
+        width: 100%;
+        min-height: 65px;
+        gap: 10px;
+        margin-top: 20px;
+        padding-bottom: 2rem;
+        & span {
+            display: inline-block;
+            user-select: none;
+            padding: 10px;
+            background-color: #f0f0f5;
             transition: background-color .3s;
-            background-color: #dcdcdc;
+            border-radius: 5px;
+            font-family: "SF-Pro-Display-Regular_light";
+            letter-spacing: 1px;
+            font-weight: 400;
+            opacity: 0;
+            &[data-no-animation=true] {
+                opacity: 1;
+            }
+            cursor: pointer;
+            &:hover {
+                transition: background-color .3s;
+                background-color: #dcdcdc;
+            }
+            &:active,
+            &:focus {
+                transition: background-color .3s,
+                            color .3s;
+                background-color: #abbcae;
+                color: white;
+            }
         }
-        &:active,
-        &:focus {
-            transition: background-color .3s,
-                        color .3s;
-            background-color: #abbcae;
-            color: white;
-        }
+    }
+}
+
+.backward {
+    padding-top: 40px;
+    cursor: pointer;
+    &:hover {
+        color: #87a08b;
     }
 }
 
