--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Categories/Categories.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Categories/Categories.module.scss
@@ -63,7 +63,7 @@
             flex-flow: row wrap;
             align-items: center;
             justify-content: baseline;
-            width: 100vw;
+            width: 100%;
             gap: 10px;
             margin-top: 20px;
             padding: 2rem 2vw;
