Интеграция со СДЕК закончена. Отображается меню истории заказов и статус закрытия у каждого заказа

--- a/ParkMobileServer/park-mobile-ssr/src/Components/Orders/ApproveModal/ApproveModal.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Orders/ApproveModal/ApproveModal.module.scss
@@ -3,6 +3,14 @@
   & > span {
     padding: 0 0 30px 0px;
   }
+
+  &-form {
+    strong {
+      font-weight: 900;
+      height: 60px;
+      border-bottom: 1px solid black;
+    }
+  }
 }
 
 .button-block {
