+ 2)В input телефона нельзя вводить буквы + 3)С почтой аналогично + 4)Перенести с "О компании" на главную странице + 5)Убрать маленькие тайлики товаров под слайдером + 6)добавить значок xiami и yandex(взять у dr.store) + 7)Реализовать кнопку купить в кредит при оформлении заказа в корзине(радио баттон "В кредит" в способ оплаты) + 8)Изменение формы оплаты:  + a)Доставка -> Способ получения  + б)порядок: Способ получения, Способ оплаты, контактная информация.  + в)Ваше имя -> ФИО получателя  + 9)Разместить "помощь" и "о компании" в шапку сайта  +! 10)Страница "Спасибо за заказ" после оформления товара + 11)Cделать так, чтобы "подробнее" и "купить" на главной странице перекидывало в соответсвующую категорию товаров

--- a/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/Products.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Catalog/Products/Products.module.scss
@@ -43,8 +43,15 @@
 
 @media (min-width:0px) and (max-width: 400px) {
   .product-cards-block {
-    grid-template-columns: 1fr;
-    gap: 20px 0px;
+    display: flex;
+    flex-flow: column;
+    width: 100%;
+    align-items: center;
+  }
+
+  .product {
+    align-items: center;
+    width: 100%;
   }
 }
 
@@ -52,5 +59,10 @@
   .product-cards-block {
     grid-template-columns: 1fr 1fr;
     gap: 40px 0px;
+  }
+
+  .product {
+    align-items: center;
+    width: 100%;
   }
 }
