--- a/ParkMobileServer/park-mobile-ssr/src/Components/UnderTilesLogos/UnderTilesLogos.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/UnderTilesLogos/UnderTilesLogos.module.scss
@@ -35,7 +35,7 @@
             &:nth-child(2) {
                 border-right: none;
             }
-            &:nth-child(3), &:nth-child(4) {
+            &:nth-child(3), &:nth-child(4), &:nth-child(5), &:nth-child(6) {
                 border-top: 1px solid #e8e8ed;
             }
         }
