1)Обратная связь на весь сайт - 5к 2)Смена заставки - 1к 3)переход по ссылке в слайдере - 3к 4)Расположение популярных товаров(изменение) - 2к 5)Добавление навигации с футера - 2к 6)Изменение шрифта цены, размера цены, смена Цена в магазине => рыночная цена - 2к 7)Переписана successPage под дизайн(компьютерная и мобильная версия) - 4к

--- a/ParkMobileServer/park-mobile-ssr/src/Components/Swiper/Swiper.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/Swiper/Swiper.module.scss
@@ -7,17 +7,13 @@
   display: flex; /* Для дополнения стилей */
   justify-content: center; /* Для центрирования */
   align-items: center; /* Для центрирования */
+  cursor: pointer;
 }
 
 @media (min-width:1025px) {
   .image-container {
-    background-size: cover; /* Изменяем auto на cover */
-    background-repeat: no-repeat;
     background-position: 70%;
-    height: 400px; /* Можно оставить фиксированной высотой или сделать адаптивной */
-    width: 100%; /* Обязательно указывайте ширину на 100% */
     display: block; /* Для дополнения стилей */
-    justify-content: center; /* Для центрирования */
-    align-items: center; /* Для центрирования */
+    cursor: pointer;
   }
 }
