--- a/ParkMobileServer/park-mobile-ssr/src/Components/About/Contacts/AboutContacts.module.scss
+++ b/ParkMobileServer/park-mobile-ssr/src/Components/About/Contacts/AboutContacts.module.scss
@@ -11,6 +11,16 @@
         color: #505050;
         font-size: 2.4rem;
     }
+    & blockquote {
+        font-family: "SF-Pro-Display-Regular_light";
+        color: #7a7a7a;
+        font-size: 1.7rem;
+        letter-spacing: 1px;
+        font-style: italic;
+        text-align: center;
+        width: 100%;
+        margin: 50px 0px;
+    }
     &-info-block {
         & h3 {
             font-family: "SF-Pro-Display-Regular";
@@ -30,6 +40,34 @@
             letter-spacing: 1px;
             & span {
                 text-wrap: balance;
+            }
+
+            &-list {
+                display: flex;
+                flex-flow: column nowrap;
+                gap: 20px;
+                & h3 {
+                    font-family: "SF-Pro-Display-Regular";
+                    color: #505050;
+                    font-size: 1.4rem;
+                }
+                & ul {
+                    list-style-type: disc;
+                    display: flex;
+                    flex-flow: column nowrap;
+                    gap: 20px;
+        
+                    & li {
+                        position: relative;
+                        padding-left: 5px;
+        
+                        & strong {
+                            font-family: "SF-Pro-Display-Regular";
+                            color: #505050;
+                            margin-right: 5px;
+                        }
+                    }
+                }
             }
         }
     }
@@ -213,63 +251,74 @@
 }
 
 @media (max-width: 1024px) {
-    .about-contacts-block-info-block {
-        align-self: flex-start;
+    .about-contacts-block {
+        padding: 17% 4% 0% 4%;
+        width: 100%;
+        & blockquote {
+            margin: 0px 0px;
+        }
 
-        &-text {
+        &-info-block {
             align-self: flex-start;
-            & span {
-                text-align: left !important;
+    
+            &-text {
+                align-self: flex-start;
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr ;
+        
+                & span {
+                    text-align: left;
+                }
+        
+                &-list {
+                    margin: 0 !important;
+                    padding: 0 !important;
+                    & ul {
+                        margin: 0;
+                        padding-left: 15px;
+                        
+                        & li {
+                            margin: 0;
+                            padding-left: 0;
+                        }
+                    }
+                }
             }
         }
-    }
 
-    .about-contacts-block-info-block-text {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-
-        & span {
-            text-align: center;
-        }
-    }
-
-    .about-contacts-block-data-grid {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-    }
-
-    .about-contacts-block-questions {
-        display: flex;
-        flex-flow: column wrap;
-        margin-top: 40px;
-
-        & img {
-            margin-top: 80px;
+        &-data-grid {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr;
         }
 
-        & span {
-            width: 100%;
-        }
+        &-questions {
+            display: flex;
+            flex-flow: column wrap;
+            margin-top: 40px;
+    
+            & img {
+                margin-top: 80px;
+            }
+    
+            & span {
+                width: 100%;
+            }
+    
+            & h3 {
+                width: 100%;
+            }
 
-        & h3 {
-            width: 100%;
-        }
-    }
-
-    .about-contacts-block {
-        padding: 17% 4% 0% 4% !important;
-        width: 100vw;
-    }
-
-    .about-contacts-block-questions-data-call {
-        & h3 {
-            margin-left: 6%;
-        }
-
-        & button {
-            width: 100%;
+            &-data-call {
+                & h3 {
+                    margin-left: 6%;
+                }
+        
+                & button {
+                    width: 100%;
+                }
+            }
         }
     }
 
